# esp32-ble-mesh-sim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  mai_tester.cpp  simulator.cpp  thread_routine.cpp
device/lib/: CMakeLists.txt
device/lib/fkernel/: CMakeLists.txt  fcallbacks.c  ftasks.c  kernel.c
device/lib/fkernel/include/: callbacks.h  fcallbacks.h  ftasks.h  gatts_table.h  kernel.h  scan.h
device/lib/flogging/: esp_log.c
device/lib/flogging/include/: esp_log.h
lib/fkernel/: CMakeLists.txt  kernel.c  scan.c
lib/flogging/: CMakeLists.txt  esp_log.c
lib/flogging/include/: esp_log.h
lib/kernel_wrapper/: kernel.h  kernel_wrapper.hpp
lib/sim_kernel/: graph.hpp  sim_kernel.hpp
management-layer/include/: core.h  graph.hpp
management-layer/src/core/: core.cpp
management-layer/src/graph/: graph.cpp
management_layer/: CMakeLists.txt
management_layer/Core/: CMakeLists.txt  core.cpp
management_layer/Core/include/: core.h
management_layer/Core/lib/dev_node/: CMakeLists.txt  dev_node.cpp
management_layer/Core/lib/dev_node/include/: dev_node.h
management_layer/Core/lib/device_graph/: CMakeLists.txt  device_graph.cpp
management_layer/Core/lib/device_graph/include/: device_graph.hpp
management_layer/Core/lib/graph/: CMakeLists.txt  edge.cpp  graph.cpp  node.cpp
management_layer/Core/lib/graph/include/: edge.h  graph.hpp  node.h
management_layer/UI_API/: CMakeLists.txt  ui_api.cpp
management_layer/UI_API/include/: ui_api.h
management_layer/libs/: CMakeLists.txt
management_layer/libs/dev_node/: CMakeLists.txt  dev_node.cpp
management_layer/libs/dev_node/include/: dev_node.h
management_layer/mai/: CMakeLists.txt  handler.cpp  ipc.cpp  ipc_message.cpp
management_layer/mai/include/: handler.hpp  ipc.hpp  ipc_message.hpp
user-interface/src/: ui.cpp
user_interface/: ui.cpp
user_interface/include/: ui.h
